@@ -1,3 +1,8 @@
+2001-12-31  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* gda-recordset.c (gda_recordset_get_value_at): move to next row
+	after successfully fetching
+
 2001-12-30  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* gda-server-recordset-model.[ch]: new class, for creating
